# chemdataextractor2

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  ARCHIVE_FORMAT_ANALYSIS.md  CHANGELOG.md  CLAUDE.md  COMMIT_SUMMARY.md  HASH_PERFORMANCE_ANALYSIS.md  Introduction.md  PICKLE_SECURITY_PLAN.md  README.md  SCIBERT_OPTIMIZATION_PLAN.md  SECURITY_REMEDIATION_PLAN.md  analyze_rsc_text.py  bandit-report-updated.json  bandit-report.json  baseline_results.json  benchmark_regex_performance.py  benchmark_results.json  benchmark_string_regex_performance.py  benchmark_trigger_performance.py  context_manager_analysis.md  debug_document_level_bug.py  debug_model_dependencies.py  debug_models_inheritance.py  debug_trigger_extraction.py  dependency_removal_analysis.md  document_hierarchy_diagram.md  extract_rsc_article.py  extract_rsc_configurable.py  extract_rsc_quick.py  extract_rsc_simple.py  investigate_apparatus_bug.py  investigate_model_assignment.py  model_scope_control_analysis.md  optimized_results.json  person_name_refactoring_plan.md  person_name_refactoring_summary.md  phase2_baseline.json  phase_2_completion_report.md  (+31 more)
.github/workflows/: test-cde-windows.yml  test-cde.yml
chemdataextractor/: __init__.py  config.py  data.py  errors.py  fastner.py  types.py  typing.py  utils.py
chemdataextractor/biblio/: __init__.py  bibtex.py  person.py  xmp.py
chemdataextractor/cli/: __init__.py  cem.py  chemdner.py  cluster.py  config.py  data.py  dict.py  evaluate.py  pos.py  tokenize.py
chemdataextractor/doc/: __init__.py  document.py  document_cacher.py  element.py  figure.py  meta.py  table.py  text.py
chemdataextractor/eval/: __init__.py  evaluation.py
chemdataextractor/model/: __init__.py  base.py  contextual_range.py  model.py
chemdataextractor/model/units/: __init__.py  angle.py  charge.py  current.py  dimension.py  electric_potential.py  energy.py  length.py  mass.py  power.py  quantity_model.py  ratio.py  substance_amount.py  temperature.py  time.py  unit.py
chemdataextractor/nlp/: __init__.py  abbrev.py  bertcrf_modules.py  bertcrf_tagger.py  cem.py  corenlp_dependency.py  corpus.py  crf.py  dependency.py  lexicon.py  new_cem.py  pos.py  spacy_dependency.py  subsentence.py  tag.py  tokenize.py  util.py
chemdataextractor/parse/: __init__.py  actions.py  apparatus.py  auto.py  auto_dependency.py  base.py  category.py  cem.py  cem_factory.py  common.py  context.py  definitions.py  elements.py  ir.py  mp.py  mp_new.py  multi_turn_qa.py  new_parsers.py  nmr.py  optimized_base.py  optimized_triggers.py  quantity.py  regex_patterns.py  template.py  tg.py  trigger_engine.py  uvvis.py
chemdataextractor/reader/: __init__.py  acs.py  base.py  cssp.py  elsevier.py  markup.py  nlm.py  pdf.py  plaintext.py  rsc.py  springer.py  springer_jats.py  uspto.py
chemdataextractor/relex/: __init__.py  candidate_parser.py  cluster.py  entity.py  pattern.py  phrase.py  relationship.py  snowball.py  utils.py
chemdataextractor/scrape/: __init__.py  base.py  clean.py  csstranslator.py  entity.py  fields.py  scraper.py  selector.py
chemdataextractor/scrape/pub/: __init__.py  elsevier.py  nlm.py  rsc.py  springer.py
chemdataextractor/text/: __init__.py  chem.py  latex.py  normalize.py  processors.py
chemdataextractor/utils/: __init__.py  advanced_typing.py  core.py
docs/: REGEX_OPTIMIZATION_ANALYSIS.md  code_documentation.rst  conf.py  getting_started.rst  index.rst  license.rst  requirements.txt
docs/development/: phase_1_progress.md  phase_3_4_completion_report.md  trigger_optimization_report.md  typing_issues_analysis.md
docs/examples/: creating_units.rst
docs/migration_guides/: index.rst  migration_guide.rst  migration_guide2.1.rst
docs/source_code_docs/: biblio.rst  chemdataextractor.rst  cli.rst  doc.rst  eval.rst  nlp.rst  reader.rst  relex.rst  scrape.rst  text.rst
examples/: README.md  advanced_extraction.py  automatic_parsers.ipynb  automatic_parsing_for_tables.ipynb  automatic_parsing_of_complex_models.ipynb  basic_usage.py  batch_processing.py  custom_models.py  extracting_a_custom_property.ipynb  phase_4_typing_demo.py  property_extraction.py  searching_rsc.ipynb  spectroscopy_extraction.py  table_processing.py  template_parsers.ipynb  using_config_file.ipynb  using_snowball.ipynb
examples/data/: table_example.csv  table_example_3.csv
mypy-report/: index.html
mypy-report/html/chemdataextractor/: __init__.py.html  config.py.html  data.py.html  errors.py.html  fastner.py.html  types.py.html  utils.py.html
requirements/: development.txt  production.txt
scripts/: README.md  code-quality.sh  melting_points_eval.py  type-check.sh
scripts/benchmarks/: benchmark_string_regex_performance.py
scripts/development/: count_mypy_errors.py  debug_trigger_extraction.py
scripts/examples/: batch_extract_papers.py  extract_rsc_configurable.py  extract_rsc_quick.py  extract_rsc_simple.py
tests/: cas_example.py  test_biblio.py  test_doc_cache.py  test_doc_document.py  test_doc_table.py  test_doc_table_2.py  test_doc_text.py  test_extract.py  test_merge_methods_comprehensive.py  test_model.py  test_model_contextual_range.py  test_model_units.py  test_nlp_abbrev.py  test_nlp_cem.py  test_nlp_pos.py  test_nlp_regex_tagger.py  test_nlp_sentence.py  test_nlp_tag.py  test_nlp_tokenize.py  test_parse_apparatus.py  test_parse_auto.py  test_parse_auto_dependency.py  test_parse_cem.py  test_parse_definitions.py  test_parse_ir.py  test_parse_mp.py  test_parse_nmr.py  test_parse_quantity.py  test_parse_regex.py  test_parse_template.py  test_parse_tg.py  test_parse_uvvis.py  test_person_name_refactoring.py  test_pre_abstract_restriction.py  test_reader_acs.py  test_reader_elsevier.py  test_reader_markup.py  test_reader_rsc.py  test_reader_springer.py  test_reader_uspto.py  (+17 more)
tests/data/acs/: acs.jmedchem.6b00723.html
tests/data/elsevier/: j.jnoncrysol.2017.07.006.xml  j.jnoncrysol.2018.02.024.xml
tests/data/rsc/: 10.1039_C6OB02074G.html  searchresults.html  test_paper.html
tests/data/springer/: spr_test1.xml
type-coverage/: index.txt
type-coverage-html/: index.html
(+253 files in other folders)
